--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/fakes/RoboVibrator.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/fakes/RoboVibrator.java.vm
@@ -44,7 +44,7 @@ public class RoboVibrator extends Vibrator {
   public void vibrate(int i, String s, long[] longs, int i1, AudioAttributes audioAttributes) {
 
   }
-#else
+#elseif ($apiLevel >= 18)
   @Override
   public void vibrate(int i, String s, long l) {
 
