--- a/robolectric-shadows/shadows-core/src/main/resources/android/hardware/display/RoboDisplayManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/android/hardware/display/RoboDisplayManager.java.vm
@@ -7,28 +7,17 @@ package android.hardware.display;
 import android.media.projection.IMediaProjection;
 #end
 
+#if ($apiLevel >= 17)
 import android.os.IBinder;
 import android.os.RemoteException;
 import android.view.DisplayInfo;
 import android.view.Surface;
 
 public class RoboDisplayManager implements IDisplayManager {
-  @Override
-  public DisplayInfo getDisplayInfo(int i) throws RemoteException {
-    return null;
-  }
-
-  @Override
-  public int[] getDisplayIds() throws RemoteException {
-    return new int[0];
-  }
-
-  @Override
-  public void registerCallback(IDisplayManagerCallback iDisplayManagerCallback) throws RemoteException {
-
-  }
 
 #if ($apiLevel >= 21)
+  // API21+
+
   @Override
   public void startWifiDisplayScan() throws RemoteException {
 
@@ -45,27 +34,9 @@ public class RoboDisplayManager implements IDisplayManager {
   }
 #end
 
-  @Override
-  public void connectWifiDisplay(String s) throws RemoteException {
-
-  }
-
-  @Override
-  public void disconnectWifiDisplay() throws RemoteException {
-
-  }
-
-  @Override
-  public void renameWifiDisplay(String s, String s1) throws RemoteException {
-
-  }
-
-  @Override
-  public void forgetWifiDisplay(String s) throws RemoteException {
-
-  }
-
 #if ($apiLevel >= 19)
+  // API19+
+
   @Override
   public void pauseWifiDisplay() throws RemoteException {
 
@@ -76,11 +47,6 @@ public class RoboDisplayManager implements IDisplayManager {
 
   }
 #end
-
-  @Override
-  public WifiDisplayStatus getWifiDisplayStatus() throws RemoteException {
-    return null;
-  }
 
 #if ($apiLevel >= 21)
   @Override
@@ -115,7 +81,53 @@ public class RoboDisplayManager implements IDisplayManager {
 #end
 
   @Override
+  public DisplayInfo getDisplayInfo(int i) throws RemoteException {
+    return null;
+  }
+
+  @Override
+  public int[] getDisplayIds() throws RemoteException {
+    return new int[0];
+  }
+
+  @Override
+  public void registerCallback(IDisplayManagerCallback iDisplayManagerCallback) throws RemoteException {
+
+  }
+
+  @Override
+  public void connectWifiDisplay(String s) throws RemoteException {
+
+  }
+
+  @Override
+  public void disconnectWifiDisplay() throws RemoteException {
+
+  }
+
+  @Override
+  public void renameWifiDisplay(String s, String s1) throws RemoteException {
+
+  }
+
+  @Override
+  public void forgetWifiDisplay(String s) throws RemoteException {
+
+  }
+
+  @Override
+  public WifiDisplayStatus getWifiDisplayStatus() throws RemoteException {
+    return null;
+  }
+
+  @Override
   public IBinder asBinder() {
     return null;
   }
 }
+
+#else
+public class RoboDisplayManager {
+  // Stub class, this was introduced in API 17
+}
+#end
