--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowLocaleData.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowLocaleData.java.vm
@@ -38,23 +38,26 @@ public class ShadowLocaleData {
 
     localeData.longMonthNames = new String[]{"January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"};
     localeData.shortMonthNames = new String[]{"Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"};
+
+#if ($apiLevel >= 17)
     localeData.tinyMonthNames = new String[]{"J", "F", "M", "A", "M", "J", "J", "A", "S", "O", "N", "D"};
-
-    localeData.longStandAloneMonthNames = localeData.longMonthNames;
-    localeData.shortStandAloneMonthNames = localeData.shortMonthNames;
     localeData.tinyStandAloneMonthNames = localeData.tinyMonthNames;
-
-    localeData.longWeekdayNames = new String[]{"", "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"};
-    localeData.shortWeekdayNames = new String[]{"", "Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"};
     localeData.tinyWeekdayNames = new String[]{"", "S", "M", "T", "W", "T", "F", "S"};
-
-    localeData.longStandAloneWeekdayNames = localeData.longWeekdayNames;
-    localeData.shortStandAloneWeekdayNames = localeData.shortWeekdayNames;
     localeData.tinyStandAloneWeekdayNames = localeData.tinyWeekdayNames;
 
     localeData.yesterday = "Yesterday";
     localeData.today = "Today";
     localeData.tomorrow = "Tomorrow";
+#end
+
+    localeData.longStandAloneMonthNames = localeData.longMonthNames;
+    localeData.shortStandAloneMonthNames = localeData.shortMonthNames;
+
+    localeData.longWeekdayNames = new String[]{"", "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"};
+    localeData.shortWeekdayNames = new String[]{"", "Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"};
+
+    localeData.longStandAloneWeekdayNames = localeData.longWeekdayNames;
+    localeData.shortStandAloneWeekdayNames = localeData.shortWeekdayNames;
 
     localeData.fullTimeFormat = "h:mm:ss a zzzz";
     localeData.longTimeFormat = "h:mm:ss a z";
