Handle null font family when creating a new Typeface.
Closes #1608.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowTypeface.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowTypeface.java.vm
@@ -58,7 +58,11 @@ public class ShadowTypeface {
 
   @Implementation
   public static Typeface create(Typeface family, int style) {
-    return createUnderlyingTypeface(shadowOf(family).getFontDescription().getFamilyName(), style);
+    if (family == null) {
+      return createUnderlyingTypeface(null, style);
+    } else {
+      return createUnderlyingTypeface(shadowOf(family).getFontDescription().getFamilyName(), style);
+    }
   }
 
   @Implementation
