like original implementation ignore when no typeface family is given
 This case happens when you use the date picker from android sdk 21

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowTypeface.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowTypeface.java.vm
@@ -58,6 +58,7 @@ public class ShadowTypeface {
 
   @Implementation
   public static Typeface create(Typeface family, int style) {
+    if(family == null) return createUnderlyingTypeface(null, style);
     return createUnderlyingTypeface(shadowOf(family).getFontDescription().getFamilyName(), style);
   }
 
