Fix bug introduced in df98189.
Add shadow for NfcAdapter.getNfcAdapter(). NfcManager needs calling
with a context as its constructor parameter otherwise it is not
initialized correctly.

Add support for NfcAdapter.setNdefPushMessageCallback() and a non-android
accessor so the callback can be executed in tests.

Closes #1614.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowContextImpl.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowContextImpl.java.vm
@@ -100,6 +100,10 @@ public class ShadowContextImpl extends ShadowContext {
         } else if (serviceClassName.equals("android.os.storage.StorageManager")) {
           service = ReflectionHelpers.callConstructor(clazz);
 
+        } else if (serviceClassName.equals("android.nfc.NfcManager")) {
+          service = ReflectionHelpers.callConstructor(clazz,
+              ClassParameter.from(Context.class, RuntimeEnvironment.application));
+
         } else if (serviceClassName.equals("android.hardware.display.DisplayManager")) {
           service = ReflectionHelpers.callConstructor(clazz, ClassParameter.from(Context.class, RuntimeEnvironment.application));
 
