--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowContextImpl.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowContextImpl.java.vm
@@ -59,6 +59,9 @@ public class ShadowContextImpl extends ShadowContext {
     SYSTEM_SERVICE_MAP.put(Context.ACCESSIBILITY_SERVICE, "android.view.accessibility.AccessibilityManager");
     SYSTEM_SERVICE_MAP.put(Context.ACCOUNT_SERVICE, "android.accounts.AccountManager");
     SYSTEM_SERVICE_MAP.put(Context.NFC_SERVICE, "android.nfc.NfcManager");
+#if ($apiLevel >= 19)
+    SYSTEM_SERVICE_MAP.put(Context.PRINT_SERVICE, "android.print.PrintManager");
+#end
   }
 
   private Map<String, Object> systemServices = new HashMap<String, Object>();
@@ -115,6 +118,14 @@ public class ShadowContextImpl extends ShadowContext {
         } else if (serviceClassName.equals("android.accounts.AccountManager")) {
           service = AccountManager.get(null);
 
+#if ($apiLevel >= 19)
+        } else if (serviceClassName.equals("android.print.PrintManager")) {
+          service = ReflectionHelpers.callConstructor(Class.forName("android.print.PrintManager"),
+            ClassParameter.from(Context.class, RuntimeEnvironment.application),
+            ClassParameter.from(android.print.IPrintManager.class, null),
+            ClassParameter.from(int.class, -1),
+            ClassParameter.from(int.class, -1));
+#end
         } else {
           service = newInstanceOf(clazz);
         }
